logs/dag_id=dag_w_postgres_v1/run_id=scheduled__2023-08-07T00:00:00+00:00/task_id=create_table_in_postgres/attempt=1.log
[2023-08-08T07:18:37.769+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_w_postgres_v1.create_table_in_postgres scheduled__2023-08-07T00:00:00+00:00 [queued]>
[2023-08-08T07:18:37.776+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_w_postgres_v1.create_table_in_postgres scheduled__2023-08-07T00:00:00+00:00 [queued]>
[2023-08-08T07:18:37.777+0000] {taskinstance.py:1308} INFO - Starting attempt 1 of 6
[2023-08-08T07:18:37.787+0000] {taskinstance.py:1327} INFO - Executing <Task(PostgresOperator): create_table_in_postgres> on 2023-08-07 00:00:00+00:00
[2023-08-08T07:18:37.792+0000] {standard_task_runner.py:57} INFO - Started process 2119 to run task
[2023-08-08T07:18:37.796+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'dag_w_postgres_v1', 'create_table_in_postgres', 'scheduled__2023-08-07T00:00:00+00:00', '--job-id', '1093', '--raw', '--subdir', 'DAGS_FOLDER/dag_postgresql.py', '--cfg-path', '/tmp/tmp7lqj_02j']
[2023-08-08T07:18:37.799+0000] {standard_task_runner.py:85} INFO - Job 1093: Subtask create_table_in_postgres
[2023-08-08T07:18:37.859+0000] {task_command.py:410} INFO - Running <TaskInstance: dag_w_postgres_v1.create_table_in_postgres scheduled__2023-08-07T00:00:00+00:00 [running]> on host e3ce6cb94b48
[2023-08-08T07:18:37.963+0000] {taskinstance.py:1547} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='Zack' AIRFLOW_CTX_DAG_ID='dag_w_postgres_v1' AIRFLOW_CTX_TASK_ID='create_table_in_postgres' AIRFLOW_CTX_EXECUTION_DATE='2023-08-07T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-08-07T00:00:00+00:00'
[2023-08-08T07:18:37.965+0000] {sql.py:265} INFO - Executing: 
            CREATE TABLE if not exists dag_runs {
                dt date,
                dag_id character varying,
                primary key  (dt, dag_id)
            }
        
[2023-08-08T07:18:37.976+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-08-08T07:18:38.054+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-08-08T07:18:38.081+0000] {sql.py:375} INFO - Running statement: 
            CREATE TABLE if not exists dag_runs {
                dt date,
                dag_id character varying,
                primary key  (dt, dag_id)
            }
        , parameters: None
[2023-08-08T07:18:38.084+0000] {taskinstance.py:1824} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 277, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "{"
LINE 2:             CREATE TABLE if not exists dag_runs {
                                                        ^

[2023-08-08T07:18:38.102+0000] {taskinstance.py:1350} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_w_postgres_v1, task_id=create_table_in_postgres, execution_date=20230807T000000, start_date=20230808T071837, end_date=20230808T071838
[2023-08-08T07:18:38.115+0000] {standard_task_runner.py:109} ERROR - Failed to execute job 1093 for task create_table_in_postgres (syntax error at or near "{"
LINE 2:             CREATE TABLE if not exists dag_runs {
                                                        ^
; 2119)
[2023-08-08T07:18:38.168+0000] {local_task_job_runner.py:225} INFO - Task exited with return code 1
[2023-08-08T07:18:38.191+0000] {taskinstance.py:2653} INFO - 0 downstream tasks scheduled from follow-on schedule check
